fix truncated date for solution in ticket timeline thx to rickyweb; fix #367

--- a/css/styles.css
+++ b/css/styles.css
@@ -2639,7 +2639,7 @@ ul#menu ul.ssmenu {
 }
 .timeline_history .left .h_date,
 .timeline_history .middle .h_date {
-   width: 100px;
+   width: 115px;
    margin: 0 auto;
 }
 
